--- a/src/pages/episodes/episode.module.scss
+++ b/src/pages/episodes/episode.module.scss
@@ -1,7 +1,8 @@
 .episode {
   max-width: 45rem;
-  padding: 3rem 2rem;
+  padding: 2rem 2rem;
   margin: 0 auto;
+  background-color: #373838;
 
   .thumbnailContainer {
     position: relative;
@@ -46,7 +47,7 @@
     border-bottom: 1px solid var(--gray-100);
 
     h1 {
-      margin-top: 2rem;
+      margin-top: 1rem;
       margin-bottom: 1.5rem;
     }
 
@@ -75,13 +76,13 @@
   }
 
   .description {
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     line-height: 1.675rem;
-    color: var(--gray-800);
+    color: var(--gray-400);
     text-align: justify;
 
     p {
-      margin: 1.2rem 0;
+      margin: 0.8rem 0;
     }
   }
 }
